# napi-plugin-demo

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/: Cargo.toml
core/src/: lib.rs
example/: index.js  package.json
node/src/: lib.rs
plugin-1/: Cargo.toml  binding.js  index.js  package.json
plugin-1/src/: lib.rs
plugin-2/: Cargo.toml  binding.d.ts  binding.js  index.js  package.json
plugin-2/src/: lib.rs
